Mon Aug 17 23:44:38 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* AUTHORS: Update license of majority of code to MIT (but note that
	  it's still effectively GPL for now).

Mon Aug 17 18:13:02 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* utils/make_xappy_tarballs,xappy/_checkxapian.py,
	  xappy/searchconnection.py,xappy/unittests/general1.py: Update for
	  new facet support interface in xapian (now in trunk).

Fri Aug 14 09:58:37 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* utils/make_xappy_tarballs: Update version numbers of
	  branchpoints.

Wed Aug 05 05:50:57 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* README: Mention where to get colormath from.

Wed Aug 05 05:40:39 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/colour_data.py: Fix not to use defaultdict.

Wed Aug 05 05:40:17 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/fieldactions.py: Fix to work with FieldGroups again.

Wed Aug 05 01:29:36 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/colour.py: Uncomment needed imports (which I'm not
	  currently sure how to satisfy).

Wed Aug 05 01:28:51 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/colour.py: Various updates and fixes.

Wed Aug 05 05:50:57 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* README: Mention where to get colormath from.

Wed Aug 05 05:40:39 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/colour_data.py: Fix not to use defaultdict.

Wed Aug 05 05:40:17 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/fieldactions.py: Fix to work with FieldGroups again.

Wed Aug 05 01:29:36 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/colour.py: Uncomment needed imports (which I'm not
	  currently sure how to satisfy).

Wed Aug 05 01:28:51 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/colour.py: Various updates and fixes.
